removing newer java syntax